force-app/main/default/objects/Project_Role__c/Project_Role__c.object-meta.xml
<CustomObject>
    <label>Membership Roles</label>
    <nameField>
        <displayFormat>PR{000}</displayFormat>
        <label>Role AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>