force-app/main/default/objects/Project_Role__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Email</label>
    <referenceTo>Alternate_Email__c</referenceTo>
    <relationshipLabel>Membership Roles</relationshipLabel>
    <relationshipName>Membership_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>