force-app/main/default/objects/Project_Role__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Membership Roles</relationshipLabel>
    <relationshipName>Project_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>