force-app/main/default/objects/Project_Role__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <formula>TEXT(Asset__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Status</label>
    <type>Text</type>
</CustomField>