force-app/main/default/objects/Project_Role__c/fields/BoardMember__c.field-meta.xml
<CustomField>
    <fullName>BoardMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Member</label>
    <type>Checkbox</type>
</CustomField>