force-app/main/default/objects/Project_Role__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <formula>Asset__r.MC_Cancellation_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Reason</label>
    <type>Text</type>
</CustomField>