force-app/main/default/objects/Project_Role__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <formula>Contact__r.Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>code</label>
    <type>Text</type>
</CustomField>