force-app/main/default/objects/Project_Role__c/fields/Corporate_Email__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Email__c</fullName>
    <formula>Alternate_Email__r.Alternate_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Email</label>
    <type>Text</type>
</CustomField>