force-app/main/default/objects/Project_Role__c/fields/Do_Not_Send_Contact_Update__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Contact_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Contact Update</label>
    <type>Checkbox</type>
</CustomField>