force-app/main/default/objects/Project_Role__c/fields/Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced__c</fullName>
    <formula>Contact__r.MC_Hard_Bounce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>