force-app/main/default/objects/Project_Role__c/fields/GitHub__c.field-meta.xml
<CustomField>
    <fullName>GitHub__c</fullName>
    <formula>Contact__r.GitHub_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GitHub</label>
    <type>Text</type>
</CustomField>