force-app/main/default/objects/Project_Role__c/fields/Heroku_Connect_Id__c.field-meta.xml
<CustomField>
    <fullName>Heroku_Connect_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Project_Role__c</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>