force-app/main/default/objects/Project_Role__c/fields/MC_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Contact_ID__c</fullName>
    <formula>Contact__r.MC_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Contact ID</label>
    <type>Text</type>
</CustomField>