force-app/main/default/objects/Project_Role__c/fields/MCProjectRoleID__c.field-meta.xml
<CustomField>
    <fullName>MCProjectRoleID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCProjectRoleID</label>
    <type>Text</type>
</CustomField>