force-app/main/default/objects/Project_Role__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <description>Product name from Purchase History record</description>
    <formula>Asset__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product name from Purchase History record</inlineHelpText>
    <label>Membership</label>
    <type>Text</type>
</CustomField>