force-app/main/default/objects/Project_Role__c/fields/Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the status of notification request sent only once.</description>
    <label>Notification Status</label>
    <type>Checkbox</type>
</CustomField>