force-app/main/default/objects/Project_Role__c/fields/Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item__c</fullName>
    <label>Opportunity Line Item</label>
    <length>20</length>
    <type>Text</type>
</CustomField>