force-app/main/default/objects/Project_Role__c/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <formula>Opportunity__r.Parent_Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Asset</label>
    <type>Text</type>
</CustomField>