force-app/main/default/objects/Project_Role__c/fields/ParentID_And_Role__c.field-meta.xml
<CustomField>
    <fullName>ParentID_And_Role__c</fullName>
    <formula>Asset__c+ Text(Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentID And Role</label>
    <type>Text</type>
</CustomField>