force-app/main/default/objects/Project_Role__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Membership Roles</relationshipLabel>
    <relationshipName>Membership_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>