force-app/main/default/objects/Project_Role__c/fields/Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Project_Team__c</fullName>
    <label>Project Team</label>
    <type>TextArea</type>
</CustomField>