force-app/main/default/objects/Project_Role__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>Asset__r.Projects__r.Name</formula>
    <label>ProjectName</label>
    <type>Text</type>
</CustomField>