force-app/main/default/objects/Project_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Voting Contact means this is the person at the company that has the right to vote in the project’s membership elections for their member class.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>Representative/Voting Contact</fullName>
                <label>Voting Contact</label>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Legal Contact</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>PO Contact</fullName>
            </value>
            <value>
                <fullName>Press Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>