force-app/main/default/objects/Project_Role__c/fields/Send_to_Groups_io__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Groups_io__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is updated when PurchaseHistory is Active.</description>
    <label>Send to Groups.io</label>
    <type>Checkbox</type>
</CustomField>