force-app/main/default/objects/Project_Role__c/fields/SugarCRM_Rel_Reference__c.field-meta.xml
<CustomField>
    <fullName>SugarCRM_Rel_Reference__c</fullName>
    <externalId>true</externalId>
    <label>SugarCRM Rel Reference</label>
    <length>36</length>
    <type>Text</type>
</CustomField>