force-app/main/default/objects/Project_Role__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <formula>Contact__r.Twitter_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter</label>
    <type>Text</type>
</CustomField>