force-app/main/default/objects/Project_Role__c/validationRules/Asset_Required_For_Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Required_For_Renewal</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND( 
ISPICKVAL(Opportunity__r.Type, &apos;Renewal&apos;),  ISPICKVAL(Opportunity__r.StageName, &apos;Closed Won&apos;),
Asset__c == null
),
true, false
)</errorConditionFormula>
    <errorDisplayField>Asset__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>