force-app/main/default/objects/Project_Role__c/validationRules/Lock_Expired_Purchase_History.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Expired_Purchase_History</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL((Asset__r.Status), &quot;Expired&quot; ),
				$Profile.Name != &apos;System Admin Custom&apos;
)</errorConditionFormula>
    <errorMessage>Purchase History associated with this Project Role is expired and hence can not be edited.</errorMessage>
</ValidationRule>