force-app/main/default/objects/Project_Role__c/validationRules/Require_Role_Association_with_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Role_Association_with_Account</fullName>
    <active>false</active>
    <description>Prohibit associating a contact with a project unless the contact is associated with appropriate account</description>
    <errorConditionFormula>AND(NOT(Asset__r.Account.IsPersonAccount),NOT(ISBLANK(Contact__c)),Contact__r.AccountId &lt;&gt; Asset__r.AccountId)</errorConditionFormula>
    <errorMessage>Project roles should belong to the same Account</errorMessage>
</ValidationRule>